# graphscii

./: .gitignore  CMakeLists.txt  Edge.hpp  Graph.hpp  README.md  Utils.hpp  Vertex.hpp  main.cpp  requirements.txt
examples/: 4d_hypercube.txt  cube.txt  cycle5.txt  goldner_harary.txt  heawood.txt  k33.txt  k6.txt  krackhardt_kite.txt  petersen.txt  star9.txt  turan_13_4.txt  tutte.txt
graphscii/: __init__.py
graphscii/algo/: __init__.py  compaction.py  display.py  orthogonalize.py  planarize.py  preprocess.py  rectangularize.py  simplify.py  tsm.py  utils.py
graphscii/dcel/: __init__.py  dcel.py  face.py  halfedge.py  vertex.py
graphscii/tests/: k_5.graphml  k_6_triangles.graphml  out.graphml  temp.graphml  test.py  vertex_pt.graphml
graphscii/tsm/: compaction.py  orthogonalize.py  planarize.py  preprocess.py  rectangularize.py  simplify.py  utils.py
src/: CMakeLists.txt  basic_graph.hpp  bc_tree.hpp  bc_tree_generator.hpp  component_processor.hpp  main.cpp  planar_graph.hpp  planarization_processor.hpp  simple_graph.hpp  spqr_tree.hpp  spqr_tree_generator.hpp
src/tests/: tests.cpp
tests/: output.txt  test.py
